parslers-benchmark/src/tests/invalid/semanticErr/function/functionSwapArgs.wacc
# function call with arguments swapped

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
	int f(int a, bool b) is
		return 0 
	end
	int x = call f(true,1);
	println x
end

	
